# Automata-Pila

./: .gitignore  APv-viernes.txt  APv.txt  CMakeLists.txt  Cadenas_viernes.txt  README.md
include/: AP.h  Estado.h  Nodo.h  SetEstados.h  SetNodos.h  SetTransiciones.h  Transicion.h
src/: AP.cpp  Estado.cpp  Nodo.cpp  SetEstados.cpp  SetNodos.cpp  SetTransiciones.cpp  Transicion.cpp  main.cpp
